--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,23 @@
+
+/* global styles */
 body {
 	margin: 0;
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: Tahoma, Arial, sans-serif;
 	font-size: 20px;
 	line-height: 30px;
 }
 
+img {
+	max-width: 100%;
+	border: none;
+}
+
+h1,
+h2 {
+	font-family: "Press Start 2P", cursive;
+}
+
+/* header section styles */
 header {
 	background-color: #d14635;
 	text-align: center;
@@ -12,8 +25,22 @@ header {
 	padding-bottom: 50px;
 }
 
-h1, h2 {
-	font-family: 'Press Start 2P', cursive;
+header img {
+	border-radius: 20px;
+	width: 300px;
+	border: solid 20px #fff;
+}
+
+h1 {
+	color: #fff;
+	font-size: 50px;
+}
+
+/* main section styles */
+main {
+	max-width: 960px;
+	margin: 0 auto;
+	padding: 20px;
 }
 
 h2 {
@@ -22,58 +49,29 @@ h2 {
 	margin: 40px 0 10px;
 }
 
-header h1 {
-	color: #ffffff;
-	/*font-family: Arial, Helevetica, sans-serif;*/
-	font-size: 50px;
-}
-
-header img {
-	width: 300px;
-	border: solid 20px #ffffff;
-
-	/*border-radius: 300px;*/
-	border-radius: 50%;
-}
-
-main {
-	max-width: 800px;
-	margin-left: auto;
-	margin-right: auto;
-	/*padding: 0 20px;*/
-	padding: 20px;
-}
-
-main img {
-	max-width: 100%;
-}
-
-p {
-	/*font-size: 20px;*/
-}
-
 a {
 	color: #e70c19;
 }
 
 a:hover {
 	background-color: #483a94;
-	color: #ffffff;
+	color: #fff;
 }
 
+/* footer section styles */
 footer {
 	background-color: #d14635;
 	text-align: center;
-	color: #ffffff;
+	color: #fff;
 	padding: 50px;
 }
 
 footer p {
-	margin: 0
+	margin: 0;
 }
 
 footer a {
-	color: #ffffff;
+	color: #fff;
 }
 
 footer a:hover {
@@ -82,7 +80,7 @@ footer a:hover {
 }
 
 p.caption {
-	color: #999999;
+	color: #999;
 	font-style: italic;
 	margin-top: 0;
 }
